--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
         body{
           background-image: url("images/bg-desktop.png");
           background-repeat: no-repeat;
-          background-position: 50% center;
-          /* background-size: 100% 100%; */
+          background-position: bottom;
           display: grid;
           height: 100vh;
           place-items: center;
@@ -185,7 +184,7 @@
         }
 
     }
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; position:absolute;bottom:0; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
